@@ -16,14 +16,14 @@ package org.jdbi.v3.sqlobject;
 import java.lang.annotation.Annotation;
 import java.lang.reflect.AnnotatedElement;
 import java.lang.reflect.Method;
+import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Comparator;
 import java.util.List;
+import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import org.jdbi.v3.core.internal.JdbiClassUtils;
-
-import static java.util.stream.Collectors.toList;
 
 /**
  * Applies decorations to method handlers, according to any {@link SqlMethodDecoratingAnnotation decorating annotations}
@@ -38,20 +38,20 @@ class SqlMethodAnnotatedHandlerDecorator implements HandlerDecorator {
     public Handler decorateHandler(Handler delegate, Class<?> sqlObjectType, Method method) {
         Handler handler = delegate;
 
-        List<Class<? extends Annotation>> annotationTypes = Stream.of(method, sqlObjectType)
+        List<? extends Class<? extends Annotation>> annotationTypes = Stream.of(method, sqlObjectType)
                 .map(AnnotatedElement::getAnnotations)
                 .flatMap(Arrays::stream)
                 .map(Annotation::annotationType)
                 .filter(type -> type.isAnnotationPresent(SqlMethodDecoratingAnnotation.class))
-                .collect(toList());
+                .collect(Collectors.toCollection(ArrayList::new)); // must be a mutable list
 
         SqlObjectAnnotationHelper.findAnnotation(DecoratorOrder.class, method, sqlObjectType)
                 .ifPresent(order -> annotationTypes.sort(createDecoratorComparator(order).reversed()));
 
-        List<HandlerDecorator> decorators = annotationTypes.stream()
+        List<? extends HandlerDecorator> decorators = annotationTypes.stream()
                 .map(type -> type.getAnnotation(SqlMethodDecoratingAnnotation.class))
                 .map(a -> JdbiClassUtils.checkedCreateInstance(a.value()))
-                .collect(toList());
+                .toList();
 
         for (HandlerDecorator decorator : decorators) {
             handler = decorator.decorateHandler(handler, sqlObjectType, method);
